--- a/common/task-poc/src/main/AndroidManifest.xml
+++ b/common/task-poc/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cz.kotox.task.data">
+    package="cz.kotox.common.task.poc">
 
     <application>
 
