--- a/feature/task-poc-detail/src/main/AndroidManifest.xml
+++ b/feature/task-poc-detail/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cz.kotox.android.feature.task.detail">
+    package="cz.kotox.feature.task.poc.detail">
 
     <application>
         <activity
-            android:name="cz.kotox.feature.task.poc.detail.ui.TaskDetailActivity"
+            android:name=".ui.TaskDetailActivity"
             android:exported="true">
         </activity>
     </application>
